#+TITLE: THERMOS Changelog
#+OPTIONS: num:nil

* Version 5
** 04 June 2019
- Added some documentation about use of user data in the CSE thermos installation
- Switched to an azimuthal equidistant projection for connector creation.
  This should make the connectors more sensible
- Added a tool for introducing new connections into a problem
- Swapped the green colour (not in solution) for yellow
- Added colours to the selection info panel to act as a key to the map colours
- Added the necessary EU funding statement to the front page
** 17 May 2019

- Wrote some more documentation
- Improved the display of solution finances to include connection costs
- Added a faint dotted underline to UI elements that have a help tooltip

** 15 May 2019

- Improved the documentation system
- Modified map creation wizard so that an input heat demand of zero is respected
- Started the changelog