@@ -18,6 +18,7 @@
 <ul>
 <li><a href="#org1469dae">Version 5</a>
 <ul>
+<li><a href="#orgb683966">07 June 2019</a></li>
 <li><a href="#org0d73f49">04 June 2019</a></li>
 <li><a href="#orgd17a58f">17 May 2019</a></li>
 <li><a href="#org0add898">15 May 2019</a></li>
@@ -30,6 +31,16 @@
 <div id="outline-container-org1469dae" class="outline-2">
 <h2 id="org1469dae">Version 5</h2>
 <div class="outline-text-2" id="text-org1469dae">
+</div>
+<div id="outline-container-orgb683966" class="outline-3">
+<h3 id="orgb683966">07 June 2019</h3>
+<div class="outline-text-3" id="text-orgb683966">
+<ul class="org-ul">
+<li>Added fallback linear models for heat demand prediction.
+These models are used when the predictors for a building are far out of range for the SVM model</li>
+<li>Fixed a bug where importing a map would delete everything in any other map within the bounding box of the imported data (!)</li>
+</ul>
+</div>
 </div>
 <div id="outline-container-org0d73f49" class="outline-3">
 <h3 id="org0d73f49">04 June 2019</h3>
@@ -55,7 +66,6 @@ This should make the connectors more sensible</li>
 </ul>
 </div>
 </div>
-
 <div id="outline-container-org0add898" class="outline-3">
 <h3 id="org0add898">15 May 2019</h3>
 <div class="outline-text-3" id="text-org0add898">
