@@ -2,6 +2,10 @@
 #+OPTIONS: num:nil
 
 * Version 5
+** 07 June 2019
+- Added fallback linear models for heat demand prediction.
+  These models are used when the predictors for a building are far out of range for the SVM model
+- Fixed a bug where importing a map would delete everything in any other map within the bounding box of the imported data (!)
 ** 04 June 2019
 - Added some documentation about use of user data in the CSE thermos installation
 - Switched to an azimuthal equidistant projection for connector creation.
@@ -11,11 +15,9 @@
 - Added colours to the selection info panel to act as a key to the map colours
 - Added the necessary EU funding statement to the front page
 ** 17 May 2019
-
 - Wrote some more documentation
 - Improved the display of solution finances to include connection costs
 - Added a faint dotted underline to UI elements that have a help tooltip
-
 ** 15 May 2019
 
 - Improved the documentation system
